<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="392dp"
        android:layout_height="298dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/three" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/add" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/six" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/sub" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/nine" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/mul" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/zero" />

            <Button
                android:id="@+id/btnDec"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/dec" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/div" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnEql"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/eql" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="false"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>